@startuml

class InventoryTracker {
    start()
    main()
}

class MainWindowController {
    items: ItemModel
    scenes: SceneManager
    fileManager: FileManager

    + MainWindowController(ItemModel, SceneManager)

    addItemButtonClicked(EventHandler)
    + addItem(String, String, Double)

    deleteSelectedItemButtonClicked(EventHandler)
    + deleteItem()

    editSelectedItemButtonClicked(EventHandler)
    + UpdateItemController(ItemModel: itemModel, Item: selectedItem)

    + filterList(searchText: String)
    + searchFindsItem(item: Item, searchText: String)

    menuItemSaveAsClicked(EventHandler)
    menuItemOpenFileClicked(EventHandler)
}

class UpdateItemWindowController {
    - itemModel: ItemModel
    - selectedItem: Item
    - inValidator: InputValidator

    updateItemButtonClicked(EventHandler)
    + editItem(serialNumber: String, name: String, price: Double)
}

class FileManager {

    + saveInventoryAsTSV(filename: String, ItemModel: itemModel)
    + saveInventoryAsHTML(filename: String, ItemModel: itemModel)
    + saveInventoryAsJSON(filename: String, ItemModel: itemModel)

    + loadInventoryAsTSV(filename: String)
    + loadInventoryAsHTML(filename: String)
    + loadInventoryAsJSON(filename: String)
}

class InputValidator {
    + isValidName(name: String)
    + isValidSerialNumber(serialNumber: String)
    + containsSerialNumber(itemModel: ItemModel, serialNumber: String)
}

class ItemModel {
    - ObservableList<Item>

    /' ObservableList is not serializable
       Copying everything over a normal list
       Use Gson on that normal list '/

     + getItems()
}

class Item {
    - name: SimpleStringProperty
    - serialNumber: SimpleStringProperty
    - value: SimpleDoubleProperty

    + getName()
    + setName()
    + getSerialNumber()
    + setSerialNumber()
    + getValue()
    + setValue()
    + convertItemToTSVString()
}

openjfx.org.Application <|-- InventoryTracker
InventoryTracker -- MainWindowController
MainWindowController -- ItemModel
MainWindowController -- UpdateItemWindowController
MainWindowController -- InputValidator
UpdateItemWindowController -- InputValidator
UpdateItemWindowController -- ItemModel
ItemModel -- Item
MainWindowController -- FileManager

@enduml